# PixelEngine

./: .gitignore  CMakeLists.txt  MODULE.bazel  README.md  tools.bzl
applications/: CMakeLists.txt
applications/learn-metal/00-window/: 00-window.cpp
applications/learn-metal/04-instancing/: 04-instancing.cpp
applications/learn-metal/Driver/: Game.cpp
applications/learn-metal/NCR-Test/: NRC-Test-textures.cpp
include/minesandmagic/: Materials.h  MinesAndMagic.h  Player.h  SingleChunkWorld.h
include/pixelengine/: Node.h  TextureBitmap.h  Utility.h
include/pixelengine/application/: AppDelegate.h  Game.h  Window.h
include/pixelengine/graphics/: Drawable.h  ParticleSystem.h  PipelineState.h  RectangularDrawable.h  ShaderProgram.h  ShaderStore.h  TextureBitmap.h  TextureContainer.h
include/pixelengine/input/: Input.h
metallib/: BUILD  CMakeLists.txt  MetalImpl.cpp
minesandmagic/: BUILD  ChunkedWorld.cpp  ChunkedWorld.h  Materials.h  MinesAndMagic.cpp  Player.cpp  Player.h  SingleChunkWorld.cpp  SingleChunkWorld.h
minesandmagic/game/: BUILD  Game.cpp
pixelengine/application/: AppDelegate.cpp  BUILD  Game.cpp  Game.h
pixelengine/graphics/: BUILD  Color.h  Drawable.cpp  Drawable.h  ParticleSystem.h  RectangularDrawable.cpp  RectangularDrawable.h  ShaderProgram.cpp  ShaderProgram.h  ShaderStore.cpp  ShaderStore.h  TextureBitmap.cpp  TextureBitmap.h  TriangulableDrawable.cpp  TriangulableDrawable.h
pixelengine/input/: BUILD  Input.cpp  Input.h
pixelengine/node/: Area.h  BUILD  ConvexArea.h  Node.h  Point.h  Scene.h
pixelengine/objects/: Ray.h
pixelengine/physics/: BUILD  InteractionSystem.h  PhysicsBody.cpp  PhysicsBody.h
pixelengine/storage/: BUILD  LoadImage.cpp  LoadImage.h  LoadPng.cpp  LoadPng.h
pixelengine/utility/: AutoBuffer.cpp  AutoBuffer.h  BUILD  Contracts.h  FrameTimer.h  Mat2.h  Mat3.h  Signal.h  Transformation2D.h  Utility.cpp  Utility.h  Vec2.h  WindowContext.h
pixelengine/world/: BUILD  BoundingBox.h  World.h
src/minesandmagic/: MinesAndMagic.cpp  Player.cpp  SingleChunkWorld.cpp
src/pixelengine/: TextureBitmap.cpp  Utility.cpp
(+26 files in other folders)
